# 2024-P1-Manpreetingh

./: README.md  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
