[tool.poetry]
name = "2024-p1-manpreetingh"
version = "0.1.0"
description = ""
authors = ["Manpreetingh <72340265+Manpreetingh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
